# miniFAVOR

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  fpm.toml  index.html  search.html
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-change-request.md  feature_request.md  support-request.md
.github/workflows/: CI.yml
app/: CMakeLists.txt  miniFAVOR.f90
doc/: ascii-art.txt  class-diagram.puml  miniFAVOR-FORD-file.md
integration_test/: CMakeLists.txt  run_test.sh  test.dat.orig  test.echo.orig  test.out.orig
interface/: a.html  assign.html  assign~2.html  b.html  broadcast.html  chemistry_content.html  chemistry_factor.html  cpi.html  cpi_avg.html  cu.html  cu_ave.html  cu_local.html  cu_sig.html  cu_sig_local.html  define.html  define~2.html  detailed_output_t.html  details.html  fsurf.html  gather.html  input_data_t.html  k_hist.html  material_content_t.html  ni.html  ni_ave.html  ni_local.html  ni_sig.html  norm.html  norm~2.html  nsim.html  nsim~2.html  ntime.html  ntime~2.html  output_data_t.html  phi.html  r_tndt.html  rtndt0.html  stress.html  subtract.html  subtract~2.html  (+5 more)
jams/: f.f90  fortran-90-interface.f90  hello.f90  structure-constructor.f90
jams/day-1/: allocatable-hello.f90  allocate-coarray.f90  async-hello.f90  hello-multiverse.f90  multistep-async-hello.f90  structure-constructor.f90
jams/tdd_jams/: README.md  fpm.toml
jams/tdd_jams/src/: assertions_m.f90  assertions_s.f90  material_content_m.f90  material_content_s.f90  object_m.f90  object_s.f90  oracle_m.f90  oracle_s.f90  random_sample_m.f90  random_sample_s.f90  tdd_jams.f90
jams/tdd_jams/test/: main.f90  material_content_test.f90  random_sample_test.f90
lists/: files.html  modules.html  procedures.html  programs.html  types.html
miniFAVOR/: Calc_RTndt.f90  Calc_cpi.f90  Commons.f90  I_O.f90  ReadMe.txt  miniFAVOR.f90  miniFAVOR.sln  miniFAVOR.vfproj
miniFAVOR/Debug/: BuildLog.htm  test.echo
module/: calc_cpi.html  calc_k.html  calc_rtndt.html  constants_h.html  detailed_output_m.html  detailed_output_s.html  input_data_m.html  input_data_s.html  input_data_tests.html  material_content_m.html  material_content_s.html  output_data_m.html  output_data_s.html  output_data_tests.html  random_samples_m.html  random_samples_s.html  random_samples_tests.html  reference_calc_cpi.html  reference_calc_k.html  reference_calc_rtndt.html  reference_constants_h.html  reference_inputs_h.html  reference_minifavor_m.html  reference_outputs_h.html  whole_shebang_tests.html
proc/: a.html  assign.html  assign~2.html  b.html  broadcast.html  broadcast_components.html  cf.html  cf~2.html  check_definition.html  check_norm_of_difference.html  check_norm_of_difference~2.html  check_whole_shebang.html  chemistry_content.html  chemistry_factor.html  cpi.html  cpi_avg.html  cpi_t.html  cpi_t~2.html  cu.html  cu_ave.html  cu_local.html  cu_sig.html  cu_sig_local.html  default_constructor.html  default_input_data_t.html  define.html  define~2.html  details.html  fsurf.html  gather.html  k_hist.html  ki_t.html  ki_t~2.html  new_detailed_output.html  new_output_data.html  ni.html  ni_ave.html  ni_local.html  ni_sig.html  norm.html  (+29 more)
program/: main.html  main~2.html  minifavor.html
sourcefile/: calc_cpi.f90.html  calc_cpi.f90~2.html  calc_k.f90.html  calc_k.f90~2.html  calc_rtndt.f90.html  calc_rtndt.f90~2.html  commons.f90.html  commons.f90~2.html  detailed_output_m.f90.html  detailed_output_s.f90.html  input_data_m.f90.html  input_data_s.f90.html  input_data_tests.f90.html  main.f90.html  main.f90~2.html  material_content_m.f90.html  material_content_s.f90.html  minifavor.f90.html  minifavor.f90~2.html  output_data_m.f90.html  output_data_s.f90.html  output_data_tests.f90.html  random_samples_m.f90.html  random_samples_s.f90.html  random_samples_tests.f90.html  reference_minifavor_m.f90.html  whole_shebang_tests.f90.html
src/: CMakeLists.txt  Calc_K.f90  Calc_RTndt.f90  Calc_cpi.f90  Commons.f90  I_O.f90  detailed_output_m.f90  detailed_output_s.f90  input_data_m.f90  input_data_s.F90  input_data_s.f90  input_data_tests.f90  input_m.f90  input_s.f90  main.f90  material_content_m.f90  material_content_s.f90  miniFAVOR.f90  output_data_m.f90  output_data_s.f90  output_data_tests.f90  output_m.f90  output_s.f90  random_samples_m.f90  random_samples_s.f90  random_samples_tests.f90  randomness_m.f90  randomness_s.f90
src/git-submodules/: CMakeLists.txt
tests/integration/: CMakeLists.txt  Commons.f90  main.f90  run_test.sh-template  test.dat.orig  test.in  test.out.orig  whole_shebang_tests.f90
tests/integration/reference-implementation/: CMakeLists.txt  Calc_K.f90  Calc_RTndt.f90  Calc_cpi.f90  Commons.f90  miniFAVOR.f90
tests/unit/: CMakeLists.txt  input_data_tests.f90  main.f90  output_data_tests.f90  random_samples_tests.f90
tipuesearch/: tipuesearch_content.js
type/: detailed_output_t.html  input_data_t.html  material_content_t.html  output_data_t.html  random_samples_t.html
