add_library(minifav
  Calc_cpi.f90
  Calc_K.f90
  Calc_RTndt.f90
  Commons.f90
  random_samples_m.f90
  random_samples_s.f90
  material_content_m.f90
  material_content_s.f90
  input_data_m.f90
  input_data_s.F90
  output_data_m.f90
  output_data_s.f90
  detailed_output_m.f90
  detailed_output_s.f90
)
target_link_libraries(minifav
  PRIVATE sourcery
)
add_subdirectory(git-submodules)
